# LearningCMake

./: CMakeLists.txt  README.md
1_Hello/: CMakeLists.txt  main.cpp
2_Include/: CMakeLists.txt  hello.cpp  main.cpp
3_Library/: CMakeLists.txt  hello.cpp
4_Subdirectory/: CMakeLists.txt
4_Subdirectory/src/app/: CMakeLists.txt  main.cpp
4_Subdirectory/src/hello/: CMakeLists.txt  hello.cpp  hello.h
5_Advanced/: CMakeLists.txt
5_Advanced/libs/LibA/: CMakeLists.txt
5_Advanced/libs/LibA/include/LibA/: A.h
5_Advanced/libs/LibA/src/: A.cpp
5_Advanced/libs/LibB/: CMakeLists.txt
5_Advanced/libs/LibB/include/LibB/: B.h
5_Advanced/libs/LibB/src/: B.cpp
5_Advanced/src/: main.cpp
